tests/baselines/reference/ES5For-of20.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of20.ts(4,15): error TS1155: 'const' declarations must be initialized


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of20.ts (1 errors) ====
    for (let v of []) {
        let v;
        for (let v of [v]) {
            const v;
                  ~
!!! error TS1155: 'const' declarations must be initialized
        }
    }